--- a/project.html
+++ b/project.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/f605babb3d.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="project.css">
     <title>My Project Page</title>
 </head>
@@ -13,13 +15,13 @@
         <a class="link" href="index.html">Home</a>
         <a class="link" href="projects.html">My Projects</a>
         <div class="socials">
-            <a class="link" href="https://github.com/vicky1312">
+            <a class="link" href="https://github.com/vicky1312" target="_blank">
                 <i class="fa-brands fa-square-github"></i>
             </a>
-            <a class="link" href="https://www.linkedin.com/feed/">
+            <a class="link" href="https://www.linkedin.com/feed/" target="_blank">
                 <i class="fa-brands fa-linkedin"></i>
             </a>
-            <a class="link" href="https://twitter.com/Justheretolurkp">
+            <a class="link" href="https://twitter.com/Justheretolurkp" target="_blank">
                 <i class="fa-brands fa-square-twitter"></i>
             </a>
     </div>
@@ -28,82 +30,82 @@
     <div class="projects">
         <div class="firstrow">
             <div class="pracport">
-                <img class="pracimg" src="favicon180x180.ico">
+                <img class="pracimg" src="Images/favicon180x180.ico">
                 <p class="pracpar">This is a semi-project I completed during my training phase which includes a practice portfolio.
                     It is a four page site which includes the home page, the registration page, login page, and the
                     contact me page.
                 </p>
                 <button class="butn1">
-                    <a class="butn" href="https://zuri-project.gilzx.repl.co/">See Project</a>
+                    <a class="butn" href="https://zuri-project.gilzx.repl.co/" target="_blank">See Project</a>
                 </button>
             </div>
             <div class="pracproj">
-                <img class="projimg" src="pracproj.ico">
+                <img class="projimg" src="Images/pracproj.ico">
                 <p class="projpar">This is a beautifully designed one page site which includes a registration section.</p>
                 <button class="butn2">
-                    <a class="butn" href="https://vicky1312.github.io/Victoryo/">See Project</a>
+                    <a class="butn" href="https://vicky1312.github.io/Victoryo/" target="_blank">See Project</a>
                 </button>
             </div>
             <div class="huddle">
-                <img class="hudimg" src="favicon225.ico">
+                <img class="hudimg" src="Images/favicon225.ico">
                 <p class="hudpar">This is a responsive landing page which was beautifully and carefully designed using html and css.
                     With it's attractive logos, the site engages it's users.
                 </p>
                 <button class="butn3">
-                    <a class="butn" href="https://vicky1312.github.io/queryproj/">See Project</a>
+                    <a class="butn" href="https://vicky1312.github.io/queryproj/" target="_blank">See Project</a>
                 </button>
             </div>
         </div>
     
         <div class="secondrow">
             <div class="grid">
-                <img class="gridimg" src="favicon227.ico">
+                <img class="gridimg" src="Images/favicon227.ico">
                 <p class="gridpar">This project was created to practice css grid layout. It contains two pages which includes a well
                     designed car advertisement page and a colour grid page.
                 </p>
                 <button class="butn4">
-                    <a class="butn" href="https://vicky1312.github.io/vicky1/">See Project</a>
+                    <a class="butn" href="https://vicky1312.github.io/vicky1/" target="_blank">See Project</a>
                 </button>
             </div>
             <div class="chess">
-                <img class="chessimg" src="favicon229.ico">
+                <img class="chessimg" src="Images/favicon229.ico">
                 <p class="chesspar">This is a chess board built using html and css table method. This project shows you the code and the result
                 </p>
                 <button class="butn5">
-                    <a class="butn" href="https://codepen.io/vicky1312/pen/bGLvOYB">See Project</a>
+                    <a class="butn" href="https://codepen.io/vicky1312/pen/bGLvOYB" target="_blank">See Project</a>
                 </button>
             </div>
             <div class="rosa">
-                <img class="rosaimg" src="favicon233.ico">
+                <img class="rosaimg" src="Images/favicon233.ico">
                 <p class="rosapar">This is a biography page about the legendary Rosa Parks. The page contains her achievements throughout her life
                     and a time stamp of each achievement. So in case you are curious to know about the great African American woman
                     who started the bus boycott, you should check out this project.
                 </p>
                 <button class="butn6">
-                    <a class="butn" href="https://codepen.io/vicky1312/pen/wvyPmLe">See Project</a>
+                    <a class="butn" href="https://codepen.io/vicky1312/pen/wvyPmLe" target="_blank">See Project</a>
                 </button>
             </div>
         </div>
         <div class="thirdrow">
             <div class="tip">
-                <img class="tipimg" src="favicon236.ico">
+                <img class="tipimg" src="Images/favicon236.ico">
                 <p class="tippar">This is a javascript project that accepts a user's amount input and preferred tip amount, this tip calculator
                     calculates the amount of people paying for a service with respect to the tip percentage and returns the total amount
                     to be paid to the user.
                 </p>
                 <button class="butn7">
-                    <a class="butn" href="https://tipcalculatorexcercise.gilzx.repl.co/">See Project</a>
+                    <a class="butn" href="https://tipcalculatorexcercise.gilzx.repl.co/" target="_blank">See Project</a>
                 </button>
             </div>
             <div class="djangoapp">
-                <img class="appimg" src="favicon238.ico">
+                <img class="appimg" src="Images/favicon238.ico">
                 <p class="apppar">With my team members in the Zuri internship program, this app was built with the django framework.
                     The app called "Conficon" was built to generate user favicons. It allows users to create an account and
                     upload an image which is to be converted to a favicon. The user can choose any size of favicon they want from 
                     the dropdown icon and it will be generated.
                 </p>
                 <button class="butn8">
-                    <a class="butn" href="http://conficon.herokuapp.com/">See Project</a>
+                    <a class="butn" href="http://conficon.herokuapp.com/" target="_blank">See Project</a>
                 </button>
             </div>
         </div>
